# spicy-to-dark-factory-starter

./: .gitignore  BONUS.md  CLAUDE.md  EXERCISES.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/agents/: coder.md  documenter.md  planner.md  reviewer.md  security-reviewer.md  tester.md
.claude/commands/: exercise-1.md  exercise-2.md  exercise-3.md  review.md  ship.md
scripts/: demo3-debate.sh
src/talkhub/: main.py  models.py  store.py
src/talkhub/routes/: talks.py  votes.py
tests/: conftest.py  test_talks.py
